--- a/css/style.css
+++ b/css/style.css
@@ -36,6 +36,7 @@ nav {
 }
 
 h1 {
+    margin-top: 3rem;
     font-family: "Star Wars";
     font-size: 16pt;
     text-align: center;
@@ -61,26 +62,23 @@ h1 {
 img {
     width: 100%;
 }
-
-.menu {
-    display: flex;
-    margin-right: 3rem;
-    justify-content: flex-end;
-}
-
 .menu-itens {
-    display: inline-flex;
+    display: flex;
     list-style: none;
-}
-
-.menu-itens li {
-    font-family: "The Mandalorian";
+    width: 100%;
+    justify-content: space-between;
+    padding: 0 20rem;
 }
 
 .menu-link {
-    font-size: 16pt;
-    margin-left: 1.6rem;
     text-decoration: none;
+    font-size: 18pt;
+    padding: 0;
+}
+
+.menu-itens li {
+    display: inline-flex;
+    font-family: "The Mandalorian";
 }
 
 .menu-link:hover {
@@ -90,8 +88,9 @@ img {
 }
 
 .all-title {
-    padding-top: 50px;
+    padding-top: 60px;
     font-size: 40pt;
+    text-align: center;
 }
 
 .about {
@@ -108,27 +107,22 @@ img {
     border-radius: 50px 0 50px 0;
 }
 
-.characters{
-    justify-content: center;
-    padding: 3rem;
-}
-
 #characters {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    column-gap: 5rem;
+    grid-template-columns: 300px 300px 300px;
+    column-gap: 3rem;
     row-gap: 3rem;
-    padding: 2rem;
+    justify-content: center;
+    align-content: center;
+    margin: 0;
+    padding: 0;
 }
 
 .character-item {
     list-style: none;
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: 300px 35px;
 }
 .character-image {
-    width: 100%;
+    width: 300px;
     grid-column-start: 1;
     grid-column-end: 3;
 }
@@ -138,6 +132,7 @@ img {
     border-radius: 10px;
     border: 3px solid #E6E6E6;
 }
+
 .character-image img:hover {
     border: 1px solid #E6E6E6;
     transition: 0.5s;
@@ -147,25 +142,68 @@ figcaption {
     font-family: "The Mandalorian";
     font-size: 24pt;
     text-align: center;
-    grid-column-start: 1;
-    grid-column-end: 3;
 }
 
 .footer {
-    clear: both;
+    width: 100%;
+    margin-top: 50px;
     text-align: center;
+    justify-content: center;
 }
 
 .social-media-list {
     list-style: none;
-    width: 100%;
+    width: 150px;
     display: inline-flex;
-    justify-content: center;
+    justify-content: space-between;
+    padding: 0;
 }
-.social-media-item {
-    padding: 0 10px;
+
+h3 {
+    width: 100%;
+    text-align: center;
 }
 
 .social-media-image {
     width: 30px;
+}
+
+@media screen and (min-width: 1281px) {
+    #characters {
+        column-gap: 7rem;
+    }
+}
+
+@media screen and (max-width: 1024px) {
+    #characters {
+        grid-template-columns: 300px 300px;
+        column-gap: 5rem;
+    }   
+    .menu-itens {
+        padding: 0 7rem;
+    }    
+}
+
+@media screen and (max-width: 768px) {
+    .menu-itens {
+        padding: 0 3rem;
+    }
+    #characters {
+        grid-template-columns: 300px 300px;
+        column-gap: 4rem;
+    }
+} 
+
+@media screen and (max-width: 700px) {
+    .menu-itens {
+        padding: 0 0.8rem;
+    }
+    #characters {
+        grid-template-columns: 300px;     
+    }   
+    .characters {
+        display: grid;
+        text-align: center;
+        justify-content: center;
+    }
 }
