--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,8 @@
 :root {
     --main-font-color: #E6E6E6;
     --main-bg-color: #303030;
+    --default-width: 300px;
+    --flex-display: flex;
 }
 
 @font-face {
@@ -20,7 +22,7 @@
 }
 
 body {
-    display: flex;
+    display: var(--flex-display);
     flex-direction: column;
     align-items: center;
     margin: 0 auto;
@@ -34,7 +36,7 @@ nav {
 }
 
 .menu-itens {
-    display: flex;
+    display: var(--flex-display);
     flex-direction: row;
     justify-content: space-between;
     width: 100%;
@@ -74,7 +76,7 @@ h1 {
 }
 
 .pre-title{
-    display: flex;
+    display: var(--flex-display);
     flex-direction: column;
     align-items: center;
     width: 15rem;
@@ -101,7 +103,7 @@ img {
 }
 
 .about {
-    padding: 2rem 2rem 0 2rem ;
+    padding: 2rem;
 }
 
 .p-article {
@@ -109,7 +111,7 @@ img {
     font-size: 16pt;
     text-align: justify;
     background-color: #ffefd0;
-    color: #303030;
+    color: var(--main-bg-color);
     padding: 1.5rem;
     border-radius: 50px 0 50px 0;
 }
@@ -120,7 +122,7 @@ img {
 
 #characters {
     display: grid;
-    grid-template-columns: 300px 300px 300px;
+    grid-template-columns: var(--default-width) var(--default-width) var(--default-width);
     column-gap: 6rem;
     grid-column: 1rem;   
     align-items: center;
@@ -129,16 +131,16 @@ img {
 }
 
 .character-item {
-    display: flex;
+    display: var(--flex-display);
     flex-direction: column;
     align-items: center;
-    width: 300px;
+    width: var(--default-width);
     height: 350px;
     list-style: none;
 }
 
 figure {
-    width: 300px;
+    width: var(--default-width);
     margin: 0;
     padding: 0;
 }
@@ -146,22 +148,21 @@ figure {
 
 .character-image img {
     border-radius: 10px;
-    border: 3px solid #E6E6E6;
+    border: 3px solid var(--main-font-color);
 }
 
 .character-image img:hover {
-    border: 1px solid #E6E6E6;
+    border: 1px solid var(--main-font-color);
     transition: 0.5s;
 }
 
 figcaption {
-    font-family: "The Mandalorian";
     font-size: 24pt;
     text-align: center;
 }
 
 .footer {
-    display: flex;
+    display: var(--flex-display);
     flex-direction: column;
     flex-wrap: wrap;
     align-items: center;
@@ -201,7 +202,7 @@ figcaption {
     }
 
     #characters {
-        grid-template-columns: 300px 300px;
+        grid-template-columns: var(--default-width) var(--default-width);
     }   
 }
 
@@ -211,14 +212,14 @@ figcaption {
     }
 
     #characters {
-        grid-template-columns: 300px 300px;
+        grid-template-columns: var(--default-width) var(--default-width);
         column-gap: 4rem;
     }
 } 
 
 @media screen and (max-width: 700px) {
     #characters {
-        grid-template-columns: 300px;     
+        grid-template-columns: var(--default-width);     
     }   
     .characters {
         display: grid;
