--- a/css/style.css
+++ b/css/style.css
@@ -31,6 +31,9 @@ body {
 
 nav {
     position: fixed;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     top: 0;
     width: 100%;
 }
@@ -42,6 +45,7 @@ nav {
     width: 100%;
     list-style: none;
     padding: 0 4rem;
+    margin: .3rem;
 }
 
 .menu-link {
@@ -56,9 +60,24 @@ nav {
     transition: 1s;
 }
 
+.theme {
+    width: 100%;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    padding: 1rem 1rem .2rem;
+}
+
+.color-theme {
+    width: 20px;
+    height: 20px;
+    background-color: #E6E6E6;
+    border-radius: 10px;
+}
+
 .title {
     display: block;
-    margin-bottom: 4rem;
+    padding: 1.2rem;
 }
 
 .md-font {
@@ -70,7 +89,7 @@ nav {
 }
 
 h1 {
-    margin-top: 3rem;
+    padding-top: 3rem;
     font-size: 16pt;
     text-align: center;
 }
