--- a/css/style.css
+++ b/css/style.css
@@ -17,16 +17,28 @@
 
 * {
     box-sizing: border-box;
+
+}
+
+body {
+    margin: 0 auto;
+    box-sizing: border-box;
+}
+
+#app {
+    display: var(--flex-display);
+    flex-direction: column;
+    align-items: center;
+}
+
+.colors-default {
     color: var(--main-font-color);
     background-color: var(--main-bg-color);
 }
 
-body {
-    display: var(--flex-display);
-    flex-direction: column;
-    align-items: center;
-    margin: 0 auto;
-    box-sizing: border-box;
+.colors-light {
+    color: var(--main-bg-color); 
+    background-color: var(--main-font-color);
 }
 
 nav {
@@ -71,7 +83,7 @@ nav {
 .color-theme {
     width: 20px;
     height: 20px;
-    background-color: #E6E6E6;
+    background-color: var(--main-font-color);
     border-radius: 10px;
 }
 
@@ -133,6 +145,7 @@ img {
     color: var(--main-bg-color);
     padding: 1.5rem;
     border-radius: 50px 0 50px 0;
+    border: 1px solid var(--main-bg-color);
 }
 
 #title-characters {
