--- a/css/style.css
+++ b/css/style.css
@@ -34,11 +34,25 @@ body {
 .colors-default {
     color: var(--main-font-color);
     background-color: var(--main-bg-color);
+    transition: .5s;
 }
 
 .colors-light {
     color: var(--main-bg-color); 
     background-color: var(--main-font-color);
+    transition: .5s;
+}
+.rotate {
+    transform: rotate(180deg);
+    transition: .5s;
+}
+
+.color-theme {
+    width: 20px;
+    height: 20px;
+    background-color: var(--main-font-color);
+    border-radius: 10px;
+    transition: .5s;
 }
 
 nav {
@@ -78,13 +92,6 @@ nav {
     justify-content: flex-end;
     align-items: center;
     padding: 1rem 1rem .2rem;
-}
-
-.color-theme {
-    width: 20px;
-    height: 20px;
-    background-color: var(--main-font-color);
-    border-radius: 10px;
 }
 
 .title {
@@ -128,7 +135,7 @@ img {
 }
 
 .all-title {
-    padding-top: 60px;
+    padding-top: 70px;
     font-size: 40pt;
     text-align: center;
 }
@@ -180,11 +187,12 @@ figure {
 
 .character-image img {
     border-radius: 10px;
-    border: 3px solid var(--main-font-color);
+    border: 1px solid var(--main-font-color);
+    transition: 0.5s;
 }
 
 .character-image img:hover {
-    border: 1px solid var(--main-font-color);
+    border: 0;
     transition: 0.5s;
 }
 
