ajust responsive facebook integration plugin

--- a/css/style.css
+++ b/css/style.css
@@ -202,7 +202,10 @@ figcaption {
 }
 
 .fb-plugin {
-    margin: 5rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 0 auto;
 }
 
 .footer {
