--- a/css/nav.css
+++ b/css/nav.css
@@ -1,10 +1,12 @@
 nav {
-    position: fixed;
+    position: sticky;
+    position: -webkit-sticky;
+    top: 0;
+    width: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
-    top: 0;
-    width: 100%;
+    z-index: 3;
 }
 
 .menu-itens {
